# slack-docs-bot

./: .env.example  .gitignore  README.md
ai-docs-bot/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-docs-bot/scripts/: ollama-setup.sh  reindex.py
ai-docs-bot/src/bot/: app.py  handlers.py  responses.py
ai-docs-bot/src/config/: settings.py
ai-docs-bot/src/ingestion/: docs_loader.py  github_loader.py
ai-docs-bot/src/retrieval/: llm_provider.py  query_engine.py
ai-docs-bot/src/storage/: chroma_store.py
ai-docs-bot/tests/: conftest.py  test_e2e_local.py  test_llm_provider.py  test_rag.py  test_settings.py
src/config/: settings.py
src/ingestion/: github_loader.py
